--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                 <div class="row">
                     <div class="button-container col-md-6 col-xs-6 col-sm-6">
                         <span class ="btn btn-danger stop-button">STOP ALL FOR THE LOVE OF GOD</span>
+                        <!-- This needs to be hooked up! -->
+                        <label class="col-md-12 col-xs-12 col-sm-12">
+                            <span class="col-md-4 col-xs-4 col-sm-4">Volume</span>
+                            <span class="col-md-8 col-xs-8 col-sm-8"><input class="volume-control" type="range" min="0" max="1" step="0.001" /></span>
+                        </label>
                     </div>
                 </div>
             </div>
