Updating branch for loopist

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <script src="lib/howler.js"></script>
         <script src="lib/listmap.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+        <script src="lib/requestAnimationFramePolyFill.js"></script>
         
         <script id="button-groups-template" type="text/x-handlebars-template">
             {{#each groups}}
